# text-generation-inference

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  setup_conda_nosudo.sh
.github/workflows/: build.yaml  free_disk_space.sh  setup_conda.yml
benchmark/: dump_fast_tokenizer.py
central/: Cargo.toml  README.md
central/src/: main.rs
clients/python/text_generation/: client.py  types.py
launcher/: Cargo.toml
launcher/src/: main.rs
notebooks/: test_client.ipynb
proto/: generate.proto
router/client/src/: client.rs
router/src/: health.rs  infer.rs  lib.rs  main.rs  queue.rs  server.rs  validation.rs
server/: Makefile  Makefile-flash-att  Makefile-vllm  pyproject.toml  vllm_testscript.py
server/text_generation_server/: cli.py
server/text_generation_server/models/: causal_lm.py  flash_causal_lm.py  flash_llama.py  seq2seq_lm.py  types.py
server/text_generation_server/models/custom_modeling/: flash_llama_modeling.py  flash_neox_modeling.py  flash_rw_modeling.py  flash_santacoder_modeling.py
server/text_generation_server/utils/: flash_attn.py  layers.py  tokens.py
setup_scripts/: conda_client.sh  conda_server.sh
