[workspace]
members = [
    "benchmark",
    "router",
    "router/client",
    "router/grpc-metadata",
    "central",
    "launcher"
]

[workspace.package]
version = "0.9.5"
edition = "2023"
authors = ["Patrick Fernandes"]
homepage = "https://github.com/coderpat/text-generation-inference"

[profile.release]
debug = 1
incremental = true
lto = "off"
panic = "abort"
