[package]
name = "text-generation-central"
description = "Text Generation Central controller tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[[bin]]
name = "text-generation-central"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive", "env"] }
warp = "0.3"
serde = {version = "1.0.142", features = ["derive"]}
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = [] }
tokio = { version = "1.25.0", features = ["full"] }
chrono = "0.4"
urlencoding = "1.1.1"
bytes = "1.1"
whoami = "1.4"

